kubernetes/goal/goal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goal-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
  selector:
    app: goal-nodejs
